--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     } 
 
     if (!isInAppBrowser()) {
-      window.location.href = "";
+      window.location.href = "https://savannahblondeworld.github.io/redirect/";
     }
   </script>
 
